syntax = "proto3";

import "google/protobuf/descriptor.proto";
import "errors/errors.proto";

package test;

option go_package = "./;test";

enum Test {
  // NotFound 找不到
  NotFound = 0 [(errors.code) = 100000];

  // Unknown 未知
  Unknown = 1 [(errors.code) = 100001];
}